--- a/templates/show.html
+++ b/templates/show.html
@@ -16,26 +16,61 @@
             <canvas id="myChart" width="400" height="400"></canvas>
         </div>
     </form>
+
     <script>
+$(document).ready(function(){
+    var ctx = $("#myChart").get(0).getContext("2d");
+    var opt = {animationSteps : 60};
+    
     var data = [
     {% for item in opts %}
-        {value: {{ item[1] }}, color:"{{ item[2] }}", label: "{{ item[0] }}"},
+        {label: "{{ item[0] }}", value: {{ item[1] }}, color:"{{ item[2] }}"},
     {% endfor %}
-    /*{value: 50, color: "#46BFBD", label: "Green"},
-    {value: 100, color: "#FDB45C", label: "Yellow"},
-    {value: 80, color: "#949FB1", label: "gray"},
-    {value: 80, color: "#C7604C", label: ""},
-    {value: 100, color: "#4D5360", label: "dark gray"},
-    {value: 80, color: "#7D4F6D", label: "dark gray"},
-    {value: 80, color: "#9D9B7F", label: "zong"},
-    {value: 80, color: "#21323D", label: "black"},
-    {value: 80, color: "#1874CD", label: ""},
-    {value: 80, color: "#218868", label: ""},
-    {value: 80, color: "#8E8E38", label: ""},
-     */]
-    var ctx = $("#myChart").get(0).getContext("2d");
-    var opt = {animationSteps : 60}
+    ];
     var myPieChart = new Chart(ctx).Pie(data,opt);
+    
+    function diff_rows(old_, new_){
+        n_o = old_.length;
+        n_n = new_.length;
+        if(n_o != n_n)
+            return 1;
+        for (var i = n_o - 1; i >= 0; i--) {
+            for (var j = n_n - 1; j >= 0; j--) {
+                if(old_[i].color != new_[j].color)
+                    continue;
+                if(old_[i].value != new_[j].value)
+                    return 1;
+            };
+        };
+        return 0;
+    };
+    function refresh(myChart){
+        var p_id = location.search.substring(1).split('=')[1];
+        $.ajax({
+            type: "POST",
+            dataType: "json",
+            url: "/refresh",
+            data: {"p_id":p_id},
+            success: function(d){
+                rows = d.rows;
+                if (diff_rows(data, rows) == 1){
+                    data = rows;
+                    myChart.destroy();
+                    var opt = {animation : false}
+                    var myPieChart = new Chart(ctx).Pie(data,opt);
+                    //myPieChart.update();
+                }
+            },
+            error: function(e,b,c){
+                alert("ajax error function.");
+                console.log(e);
+                console.log(b);
+            }
+        });
+    };
+
+    setInterval(function(){refresh(myPieChart);}, 3000);
+});
     </script>
     </div>
     </body>
